force-app/main/default/objects/Sales_Motion_Page__c/Sales_Motion_Page__c.object-meta.xml
<CustomObject>
    <label>Sales Motion Page</label>
    <nameField>
        <label>Page Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Motion Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>