force-app/main/default/objects/Sales_Motion_Page__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Checked to Publish this Sales Motion Page</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>