force-app/main/default/objects/Sales_Motion_Page__c/fields/Sales_Motion_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Motion_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Motion Name</label>
    <referenceTo>Sales_Motion__c</referenceTo>
    <relationshipLabel>Sales Motion Pages</relationshipLabel>
    <relationshipName>Sales_Motion_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>