force-app/main/default/objects/Sales_Motion_Page__c/fields/Solution_Name__c.field-meta.xml
<CustomField>
    <fullName>Solution_Name__c</fullName>
    <formula>TEXT(Sales_Motion_Name__r.Solution_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Name</label>
    <type>Text</type>
</CustomField>