force-app/main/default/objects/Sales_Motion_Page__c/fields/Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type__c</fullName>
    <formula>TEXT(Sales_Motion_Name__r.Solution_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Type</label>
    <type>Text</type>
</CustomField>