force-app/main/default/objects/Sales_Motion_Page__c/fields/Stages_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Stages_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stages Enabled</label>
    <type>Checkbox</type>
</CustomField>