force-app/main/default/objects/Sales_Motion_Page__c/validationRules/Page_Title_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Page_Title_Read_Only</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISCHANGED( Name ))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Page Title field cannot be modified.</errorMessage>
</ValidationRule>