force-app/main/default/objects/Sales_Motion_Page__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Motion_Name__c</columns>
    <columns>Stages_Enabled__c</columns>
    <columns>Domain__c</columns>
    <columns>Solution_Type__c</columns>
    <columns>Solution_Name__c</columns>
    <columns>SalesMotionUniqueID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>