force-app/main/default/objects/Sales_Motion_Page__c/listViews/All_unpublished_Pages.listView-meta.xml
<ListView>
    <fullName>All_unpublished_Pages</fullName>
    <columns>Sales_Motion_Name__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>IsActive__c</columns>
    <columns>Stages_Enabled__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All unpublished Pages</label>
    <language>en_US</language>
</ListView>